fix spacebar key

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </a>
 
           <div class="container mt-5">
-            <div class="videos membrane-video" data-video="assets/video/membrane-video.mp4" data-type="video/mp4" data-poster="assets/img/poster-video.png">
+            <div class="videos membrane-video" id="video-0" data-video="assets/video/membrane-video.mp4" data-type="video/mp4" data-poster="assets/img/poster-video.png">
 
           </div>
           <div class="row text-center mt-5">
@@ -306,8 +306,8 @@
 
           <div class="multiple-items mt-4 mt-md-6 row">
             <div class="col-md-6">
-              <div class="container text-left pb-5 pl-0 pr-0" >
-                <div class="videos testimonios" data-video="assets/video/testimony-02.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-3.png" data-parent='multiple-items'>
+              <div class="container text-left pb-5 pl-0 pr-0">
+                <div class="videos testimonios"  id="video-1" data-video="assets/video/testimony-02.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-3.png" data-parent='multiple-items'>
 
                 </div>
 
@@ -316,7 +316,7 @@
             </div>
             <div class="col-md-6">
               <div class="container text-left pb-5 pl-0 pr-0">
-                <div class="videos testimonios" data-video="assets/video/testimony-01.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-2.png" data-parent='multiple-items'>
+                <div class="videos testimonios" id="video-2" data-video="assets/video/testimony-01.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-2.png" data-parent='multiple-items'>
 
                 </div>
 
@@ -672,7 +672,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js?2"></script>
-    <script src="js/rtop.videoPlayer.1.0.2.min.js"></script>
+    <script src="js/rtop.videoPlayer.1.0.2.min.js?3552224444"></script>
 
     <script>
       $(document).ready(function () {
@@ -765,6 +765,6 @@
       });
 
           </script>
-        <script src="js/videos.js"></script>
+        <script src="js/videos.js?6224444342u33123132222"></script>
   </body>
 </html>
