--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     />
     <link href="css/rtop.videoPlayer.1.0.2.min.css?15" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css?241722" rel="stylesheet" />
+    <link href="css/styles.css?24172332" rel="stylesheet" />
     <!-- Slick Carousel-->
     <link rel="stylesheet" type="text/css" href="slick/slick.css?100" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css?83233" />
@@ -222,7 +222,7 @@
           </a>
 
           <div class="container mt-5">
-            <div class="videos membrane-video" id="video-0" data-video="assets/video/membrane-video.mp4" data-type="video/mp4" data-poster="assets/img/poster-video.png">
+            <div class="videos membrane-video" id="video-0" data-video="assets/video/membrane-video.mp4" data-type="video/mp4" data-poster="assets/img/poster-video.png?2">
 
           </div>
           <div class="row text-center mt-5">
@@ -305,18 +305,18 @@
           <div class="hr-divider-grey mx-auto mb-5"></div>
 
           <div class="multiple-items mt-4 mt-md-6 row">
-            <div class="col-md-6">
+            <div class="col-lg-6">
               <div class="container text-left pb-5 pl-0 pr-0">
-                <div class="videos testimonios"  id="video-1" data-video="assets/video/testimony-02.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-3.png" data-parent='multiple-items'>
+                <div class="videos testimonios"  id="video-1" data-video="assets/video/testimony-02.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-3.png?4" data-parent='multiple-items'>
 
                 </div>
 
                 <!-- <h5 class="mobile-1000"><b>Hear from an Audiologist</b></h5> -->
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
               <div class="container text-left pb-5 pl-0 pr-0">
-                <div class="videos testimonios" id="video-2" data-video="assets/video/testimony-01.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-2.png" data-parent='multiple-items'>
+                <div class="videos testimonios" id="video-2" data-video="assets/video/testimony-01.mp4" data-type="video/mp4" data-poster="assets/img/poster-video-2.png?5" data-parent='multiple-items'>
 
                 </div>
 
@@ -730,6 +730,7 @@
                   },
                 ],
               });
+
             }
           }
         });
